
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct xor2_key {struct xor2_key* next; int key; } ;


 int rand () ;

struct xor2_key *choose_random_node(struct xor2_key *head)
{
    int num_nodes = 1, selected_node, i;
    struct xor2_key* tail = head;

    struct xor2_key* pn = ((void*)0) ;

    if (!head || !head->key)
        return 0;

    while(tail->next)
    {
        tail = tail->next;
        num_nodes++;
    }

    selected_node = rand()%num_nodes;

    for(i=0; i<selected_node; i++)
        head = head->next;

    return head;
}
