; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/generator/extr_13286.c_choose_random_node.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/generator/extr_13286.c_choose_random_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xor2_key = type { %struct.xor2_key*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.xor2_key* @choose_random_node(%struct.xor2_key* %0) #0 {
  %2 = alloca %struct.xor2_key*, align 8
  %3 = alloca %struct.xor2_key*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.xor2_key*, align 8
  %8 = alloca %struct.xor2_key*, align 8
  store %struct.xor2_key* %0, %struct.xor2_key** %3, align 8
  store i32 1, i32* %4, align 4
  %9 = load %struct.xor2_key*, %struct.xor2_key** %3, align 8
  store %struct.xor2_key* %9, %struct.xor2_key** %7, align 8
  store %struct.xor2_key* null, %struct.xor2_key** %8, align 8
  %10 = load %struct.xor2_key*, %struct.xor2_key** %3, align 8
  %11 = icmp ne %struct.xor2_key* %10, null
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = load %struct.xor2_key*, %struct.xor2_key** %3, align 8
  %14 = getelementptr inbounds %struct.xor2_key, %struct.xor2_key* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %12, %1
  store %struct.xor2_key* null, %struct.xor2_key** %2, align 8
  br label %47

18:                                               ; preds = %12
  br label %19

19:                                               ; preds = %24, %18
  %20 = load %struct.xor2_key*, %struct.xor2_key** %7, align 8
  %21 = getelementptr inbounds %struct.xor2_key, %struct.xor2_key* %20, i32 0, i32 0
  %22 = load %struct.xor2_key*, %struct.xor2_key** %21, align 8
  %23 = icmp ne %struct.xor2_key* %22, null
  br i1 %23, label %24, label %30

24:                                               ; preds = %19
  %25 = load %struct.xor2_key*, %struct.xor2_key** %7, align 8
  %26 = getelementptr inbounds %struct.xor2_key, %struct.xor2_key* %25, i32 0, i32 0
  %27 = load %struct.xor2_key*, %struct.xor2_key** %26, align 8
  store %struct.xor2_key* %27, %struct.xor2_key** %7, align 8
  %28 = load i32, i32* %4, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %4, align 4
  br label %19

30:                                               ; preds = %19
  %31 = call i32 (...) @rand()
  %32 = load i32, i32* %4, align 4
  %33 = srem i32 %31, %32
  store i32 %33, i32* %5, align 4
  store i32 0, i32* %6, align 4
  br label %34

34:                                               ; preds = %42, %30
  %35 = load i32, i32* %6, align 4
  %36 = load i32, i32* %5, align 4
  %37 = icmp slt i32 %35, %36
  br i1 %37, label %38, label %45

38:                                               ; preds = %34
  %39 = load %struct.xor2_key*, %struct.xor2_key** %3, align 8
  %40 = getelementptr inbounds %struct.xor2_key, %struct.xor2_key* %39, i32 0, i32 0
  %41 = load %struct.xor2_key*, %struct.xor2_key** %40, align 8
  store %struct.xor2_key* %41, %struct.xor2_key** %3, align 8
  br label %42

42:                                               ; preds = %38
  %43 = load i32, i32* %6, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %6, align 4
  br label %34

45:                                               ; preds = %34
  %46 = load %struct.xor2_key*, %struct.xor2_key** %3, align 8
  store %struct.xor2_key* %46, %struct.xor2_key** %2, align 8
  br label %47

47:                                               ; preds = %45, %17
  %48 = load %struct.xor2_key*, %struct.xor2_key** %2, align 8
  ret %struct.xor2_key* %48
}

declare dso_local i32 @rand(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
